--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Leaf Green Footprints Project enivromental awareness for PGC",
   "main": "leaflet-src.esm.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack && node server"
   },
   "repository": {
     "type": "git",
@@ -17,8 +17,20 @@
   },
   "homepage": "https://github.com/FinalProject-377/FinalProject-377.github.io#readme",
   "dependencies": {
+    "@babel/polyfill": "^7.7.0",
+    "consolidate": "^0.15.1",
     "express": "^4.17.1",
+    "leaflet": "^1.6.0",
+    "mustache": "^3.1.0",
     "node-fetch": "^2.6.0",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "babel-loader": "^8.0.6",
+    "glob": "^7.1.6",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
   }
 }
